@@ -1,3 +1,7 @@
+2003-11-02  Per Bothner  <per@bothner.com>
+
+	* XQuery.java (parse, parseFile):  Combined to single 'parse' method.
+
 2003-10-30  Per Bothner  <per@bothner.com>
 
 	* XQuery.java (typeMap):  New static field.
